[package]
name = "sidd-rs"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Crate to interact with SIDD files."
readme = "README.md"
repository = "https://github.com/shauglandarka/sidd-rs"

[dependencies]
thiserror = "1.0"
num-complex = "0.4.3"
nitf-rs = { version = "0.3.1"}
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.28", features = ["serialize"] }
zerocopy = "0.7.32"
memmap2 = "0.5.10"
chrono = {version = "0.4.45", features = ["serde"]}
fmt = "0.1.0"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ndarray-npy = "0.8"
